--- a/.github/workflows/multi.yml
+++ b/.github/workflows/multi.yml
@@ -1,65 +1,80 @@
 name: CI/CD Workflow with Sub-jobs and Manual Approvals
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
+  set-up:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set Branch
+      id: set-branch
+      run: |
+        # If the event is a schedule, set the branch to 'integration'
+        # Otherwise, use the branch specified in the workflow_dispatch or default to 'main'
+        if [[ "${{ github.event_name }}" == "schedule" ]]; then
+          echo "SCAN_BRANCH=integration" >> $GITHUB_ENV
+        else
+          echo "SCAN_BRANCH=$(echo $GITHUB_REF | sed 's/refs\/heads\///')" >> $GITHUB_ENV
+        fi
+
   # Development Job
   dev:
     runs-on: ubuntu-latest
     outputs:
       dev_output: ${{ steps.set_output.outputs.dev_value }}  # Output value to be used in prod and stage jobs
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set output value in dev
-        id: set_output
-        run: |
-          echo "dev_value=Hello from dev" >> $GITHUB_ENV
-          echo "::set-output name=dev_value::Hello from dev"
+    - name: Set output value in dev
+      id: set_output
+      run: |
+        echo "dev_value=Hello from dev" >> $GITHUB_ENV
+        echo "::set-output name=dev_value::Hello from dev"
 
   # Staging Job
   stage:
     runs-on: ubuntu-latest
     needs: dev  # Stage depends on dev job
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
   # Production Job
   prod:
     runs-on: ubuntu-latest
     needs: stage  # Prod depends on stage
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
   # Sub-job 1 in dev (core_image_push)
   core_image_push_dev:
     runs-on: ubuntu-latest
     needs: dev  # Depends on dev job
     steps:
-      - name: Push core image for dev
-        run: echo "Pushing core image for dev"
+    - name: Push core image for dev
+      run: echo "Pushing core image for dev"
 
   # Sub-job 2 in dev (opensource_image_push)
   opensource_image_push_dev:
     runs-on: ubuntu-latest
     needs: dev  # Depends on dev job
     steps:
-      - name: Push opensource image for dev
-        run: echo "Pushing opensource image for dev"
+    - name: Push opensource image for dev
+      run: echo "Pushing opensource image for dev"
 
   # Sub-job 3 in dev (pre_upgrade_artifact_upload)
   pre_upgrade_artifact_upload_dev:
     runs-on: ubuntu-latest
     needs: dev  # Depends on dev job
     steps:
-      - name: Upload pre-upgrade artifacts for dev
-        run: echo "Uploading pre-upgrade artifacts for dev"
+    - name: Upload pre-upgrade artifacts for dev
+      run: echo "Uploading pre-upgrade artifacts for dev"
 
   # Sub-job 4 in dev (upgrade_artifact_upload) - Needs approval
   upgrade_artifact_upload_dev:
@@ -68,32 +83,32 @@ jobs:
     environment: 
       name: dev  # Requires approval
     steps:
-      - name: Upload upgrade artifacts for dev
-        run: echo "Uploading upgrade artifacts for dev"
+    - name: Upload upgrade artifacts for dev
+      run: echo "Uploading upgrade artifacts for dev"
 
   # Sub-job 1 in stage (core_image_push)
   core_image_push_stage:
     runs-on: ubuntu-latest
     needs: stage  # Depends on stage job
     steps:
-      - name: Push core image for stage
-        run: echo "Pushing core image for stage"
+    - name: Push core image for stage
+      run: echo "Pushing core image for stage"
 
   # Sub-job 2 in stage (opensource_image_push)
   opensource_image_push_stage:
     runs-on: ubuntu-latest
     needs: stage  # Depends on stage job
     steps:
-      - name: Push opensource image for stage
-        run: echo "Pushing opensource image for stage"
+    - name: Push opensource image for stage
+      run: echo "Pushing opensource image for stage"
 
   # Sub-job 3 in stage (pre_upgrade_artifact_upload)
   pre_upgrade_artifact_upload_stage:
     runs-on: ubuntu-latest
     needs: stage  # Depends on stage job
     steps:
-      - name: Upload pre-upgrade artifacts for stage
-        run: echo "Uploading pre-upgrade artifacts for stage"
+    - name: Upload pre-upgrade artifacts for stage
+      run: echo "Uploading pre-upgrade artifacts for stage"
 
   # Sub-job 4 in stage (upgrade_artifact_upload) - Needs approval
   upgrade_artifact_upload_stage:
@@ -102,32 +117,32 @@ jobs:
     environment: 
       name: dev  # Requires approval
     steps:
-      - name: Upload upgrade artifacts for stage
-        run: echo "Uploading upgrade artifacts for stage"
+    - name: Upload upgrade artifacts for stage
+      run: echo "Uploading upgrade artifacts for stage"
 
   # Sub-job 1 in prod (core_image_push)
   core_image_push_prod:
     runs-on: ubuntu-latest
     needs: prod  # Depends on prod job
     steps:
-      - name: Push core image for prod
-        run: echo "Pushing core image for prod"
+    - name: Push core image for prod
+      run: echo "Pushing core image for prod"
 
   # Sub-job 2 in prod (opensource_image_push)
   opensource_image_push_prod:
     runs-on: ubuntu-latest
     needs: prod  # Depends on prod job
     steps:
-      - name: Push opensource image for prod
-        run: echo "Pushing opensource image for prod"
+    - name: Push opensource image for prod
+      run: echo "Pushing opensource image for prod"
 
   # Sub-job 3 in prod (pre_upgrade_artifact_upload)
   pre_upgrade_artifact_upload_prod:
     runs-on: ubuntu-latest
     needs: prod  # Depends on prod job
     steps:
-      - name: Upload pre-upgrade artifacts for prod
-        run: echo "Uploading pre-upgrade artifacts for prod"
+    - name: Upload pre-upgrade artifacts for prod
+      run: echo "Uploading pre-upgrade artifacts for prod"
 
   # Sub-job 4 in prod (upgrade_artifact_upload) - Needs approval
   upgrade_artifact_upload_prod:
@@ -136,5 +151,5 @@ jobs:
     environment: 
       name: prod  # Requires approval
     steps:
-      - name: Upload upgrade artifacts for prod
-        run: echo "Uploading upgrade artifacts for prod"
+    - name: Upload upgrade artifacts for prod
+      run: echo "Uploading upgrade artifacts for prod"
