--- a/.github/workflows/multi.yml
+++ b/.github/workflows/multi.yml
@@ -7,39 +7,46 @@ on:
       - main
 
 jobs:
-  set-up:
+  set_up:
     runs-on: ubuntu-latest
+    outputs:
+      branch_output: ${{ steps.set_branch.outputs.scan_branch }}  # Output value to be used in prod and stage jobs
     steps:
-    - name: Set Branch
-      id: set-branch
-      run: |
-        # If the event is a schedule, set the branch to 'integration'
-        # Otherwise, use the branch specified in the workflow_dispatch or default to 'main'
-        if [[ "${{ github.event_name }}" == "schedule" ]]; then
-          echo "SCAN_BRANCH=integration" >> $GITHUB_ENV
-        else
-          echo "SCAN_BRANCH=$(echo $GITHUB_REF | sed 's/refs\/heads\///')" >> $GITHUB_ENV
-        fi
+      - name: Set Branch
+        id: set_branch
+        run: |
+          # If the event is a schedule, set the branch to 'integration'
+          # Otherwise, use the branch specified in the workflow_dispatch or default to 'main'
+          if [[ "${{ github.event_name }}" == "schedule" ]]; then
+            echo "scan_branch=integration" >> $GITHUB_ENV
+            echo "scan_branch=integration" >> $GITHUB_OUTPUT  # Set output for this step
+          else
+            branch=$(echo $GITHUB_REF | sed 's/refs\/heads\///')
+            echo "scan_branch=$branch" >> $GITHUB_ENV
+            echo "scan_branch=$branch" >> $GITHUB_OUTPUT  # Set output for this step
+          fi
 
   # Development Job
   dev:
+    if: ${{ needs.set_up.outputs.branch_output == 'integration' }}  # Conditionally run based on branch_output
     runs-on: ubuntu-latest
+    needs: set_up
     outputs:
       dev_output: ${{ steps.set_output.outputs.dev_value }}  # Output value to be used in prod and stage jobs
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set output value in dev
-      id: set_output
-      run: |
-        echo "dev_value=Hello from dev" >> $GITHUB_ENV
-        echo "::set-output name=dev_value::Hello from dev"
+      - name: Set output value in dev
+        id: set_output
+        run: |
+          echo "dev_value=Hello from dev" >> $GITHUB_ENV
+          echo "::set-output name=dev_value::Hello from dev"
 
   # Staging Job
   stage:
     runs-on: ubuntu-latest
-    needs: dev  # Stage depends on dev job
+    needs: set_up   # Stage depends on dev job
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -47,7 +54,7 @@ jobs:
   # Production Job
   prod:
     runs-on: ubuntu-latest
-    needs: stage  # Prod depends on stage
+    needs: set_up  # Prod depends on stage
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
