--- a/.github/workflows/multi.yml
+++ b/.github/workflows/multi.yml
@@ -122,7 +122,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: stage  # Depends on stage job
     environment: 
-      name: dev  # Requires approval
+      name: stage  # Requires approval
     steps:
     - name: Upload upgrade artifacts for stage
       run: echo "Uploading upgrade artifacts for stage"
