--- a/.github/workflows/multi.yml
+++ b/.github/workflows/multi.yml
@@ -45,6 +45,7 @@ jobs:
 
   # Staging Job
   stage:
+    if: ${{ startsWith(needs.set_up.outputs.branch_output, 'v.') }}
     runs-on: ubuntu-latest
     needs: set_up   # Stage depends on dev job
     steps:
@@ -53,6 +54,7 @@ jobs:
 
   # Production Job
   prod:
+    if: ${{ startsWith(needs.set_up.outputs.branch_output, 'v.') }}
     runs-on: ubuntu-latest
     needs: set_up  # Prod depends on stage
     steps:
