--- a/.github/workflows/multi.yml
+++ b/.github/workflows/multi.yml
@@ -4,7 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      # - main
+      - v*.*.*
+      - integration
 
 jobs:
   set_up:
