--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -16,6 +16,7 @@ jobs:
   qc:
     runs-on: 'ubuntu-latest'
     environment: 'qc'
+    if: ${{ github.event.inputs.environment == 'qc' }}
     steps:
     - name: Set up Python 3.x
       uses: actions/setup-python@v4
@@ -33,7 +34,7 @@ jobs:
     - name: Run Template Loader script
       working-directory: ./setup
       run: |
-        echo "$VALYES_FILE"
+        python -u template-loader.py
       env:
         PARTNER_API_KEY: ${{ secrets.PARTNER_API_KEY }}
         VALUES_FILE: "./values-qc.yaml"
@@ -41,6 +42,7 @@ jobs:
   preview:
     runs-on: 'ubuntu-latest'
     environment: 'dev'
+    if: ${{ github.event.inputs.environment == 'preview' }}
     steps:
     - name: Set up Python 3.x
       uses: actions/setup-python@v4
@@ -58,7 +60,7 @@ jobs:
     - name: Run Template Loader script
       working-directory: ./setup
       run: |
-        echo "$VALYES_FILE"
+        python -u template-loader.py
       env:
         PARTNER_API_KEY: ${{ secrets.PARTNER_API_KEY }}
         VALUES_FILE: "./values-preview.yaml"
@@ -66,6 +68,7 @@ jobs:
   prod:
     runs-on: 'ubuntu-latest'
     environment: 'prod'
+    if: ${{ github.event.inputs.environment == 'prod' }}
     steps:
     - name: Set up Python 3.x
       uses: actions/setup-python@v4
@@ -79,7 +82,7 @@ jobs:
     - name: Run Template Loader script
       working-directory: ./setup
       run: |
-        echo "$VALYES_FILE"
+        python -u template-loader.py
       env:
         PARTNER_API_KEY: ${{ secrets.PARTNER_API_KEY }}
         VALUES_FILE: "./values-prod.yaml"
